Github live pages overflow fix v6
Contact-1 en -2 p aangepast.

--- a/styles/style.css
+++ b/styles/style.css
@@ -521,11 +521,13 @@ footer {
 }
 
 .contact-1 p {
-  margin-top: -20px;
+  margin: 0.2em 0;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .contact-2 p {
-  margin-top: -20px;
-  margin-bottom: 0;
-  max-width: 100vw;
+  margin: 0.2em 0;
+  max-width: 100%;
+  box-sizing: border-box;
 }
